<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_banis"
            android:icon="@drawable/ic_menu_banis"
            android:title="@string/menu_banis" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_other_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/menu_other_apps" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_youtube"
            android:title="@string/menu_youtube" />
        <item
            android:id="@+id/nav_dark_mode"
            android:title="Dark Mode"
            android:actionLayout="@layout/nav_switch_item"
            android:icon=""/>

    </group>
</menu> 